# ferric

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  PHASES.md  README.md  SLICES.md  TASKS.md
.githooks/: pre-commit
docs/: agentic-workflow-v1.md  architecture.md  boundaries.md  cargo.md  coding-style.md  crates.md  phases-agent-guide.md  security.md  testing.md
docs/appendix/: git-integration.md  session-recovery.md
docs/memory/: index.md  memory-review-template.md  topic-template.md
docs/task_archive/: README.md  slices_phase1_2026-05-01.md  tasks_phase1_bootstrap_2026-05-01.md
docs/templates/: phases-template.md  slices-template.md  tasks-template.md
scripts/: validate_tasks_state.py
src/: lib.rs  main.rs
