[package]
name = "my-project"
version = "0.1.0"
edition = "2021"
description = "Clean starter template for Rust projects (library + binary) using the lightweight phased agentic workflow. See docs/agentic-workflow-v1.md for rules."
authors = ["Your Name <you@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/my-project"  # update after forking

[lib]
name = "my_project"
path = "src/lib.rs"

[[bin]]
name = "my-project"
path = "src/main.rs"

[dependencies]
# Minimal baseline for template. New dependencies require approval per docs/boundaries.md and docs/crates.md
