[package]
name = "ferric"
version = "0.1.0"
edition = "2021"
description = "Ferric - lightweight phased agentic development workflow for Rust projects. See docs/agentic-workflow-v1.md for rules."
authors = ["Your Name <you@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/ferric"  # update after forking

[lib]
name = "ferric"
path = "src/lib.rs"

[[bin]]
name = "ferric"
path = "src/main.rs"

[dependencies]
# Minimal baseline for template. New dependencies require approval per docs/boundaries.md and docs/crates.md
